    [DSS-274] - Improve error message when trying to sign PDF with document restrictions
    [DSS-355] - Improved API for archiving
    [DSS-358] - Should be able to set j2ee.web-nohttps=false
    [DSS-368] - Default to not use clusterclassloader
    [DSS-415] - Improve source code quality
    [DSS-435] - Refuse to certify PDFs already certified and refuse to sign when signing is not allowed

** New Feature

    [DSS-194] - Deploy documentation with application
    [DSS-430] - Support for signing PDFs with document restrictions
    [DSS-431] - Support for PDF permissions enforcement
    [DSS-432] - Support for modifying PDF permissions
    [DSS-433] - Support for setting a PDF permissions password

** Task

    [DSS-259] - Include modules in build in the default configuration
    [DSS-406] - Upgrade projects to NetBeans IDE 7.0
    [DSS-414] - JUnit test to show when JCE crypto policy has not been applied


SignServer 3.2.0, 2011-06-30
----------------------------

** Bug
    * [DSS-307] - Client certificate authentication might not work with WS Worker
    * [DSS-344] - Order of issuer DN in SOD reversed comparared to certificate
    * [DSS-349] - Disabled features should not be built
    * [DSS-350] - Enable/include properties for PDFSigner in signserver_build.properties.sample
    * [DSS-374] - Document that RemoteAddressAuthorizer with ALLOW_FROM=null, allow calls from other Workers
    * [DSS-377] - Times services should swallow runtime exceptions
    * [DSS-382] - Certificates used in unit tests needs renewal
    * [DSS-385] - SQL exceptions during second deployment on GlassFish
    * [DSS-395] - ValidationCLI not working with HTTPS
    * [DSS-397] - Certificates used in sample configurations needs renewal
    * [DSS-400] - Spelling error in ServiceStatus

** Improvement
    * [DSS-125] - Divide the project in sub-projects with separate source folders
    * [DSS-128] - GlassFish V2 support
    * [DSS-156] - Remove need for preprocessing Java-files